--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gryphon",
   "version": "0.0.0",
   "description": "Public-key auth stuff",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "mocha --check-leaks --ui exports"
   },
