use a valid SPDX license identifier

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "hawk"
   ],
   "author": "Sean McArthur <sean.monstar@gmail.com> (http://seanmonstar.com)",
-  "license": "MPLv2.0",
+  "license": "MPL-2.0",
   "bugs": {
     "url": "https://github.com/seanmonstar/gryphon/issues"
   },
